--- a/app/src/main/res/layout/list_item_row.xml
+++ b/app/src/main/res/layout/list_item_row.xml
@@ -15,25 +15,25 @@
         android:inputType="textPersonName" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/cbIsPrintable"
-            android:layout_width="86dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/print" />
 
         <CheckBox
             android:id="@+id/cbIsBold"
-            android:layout_width="87dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bold" />
 
         <EditText
             android:id="@+id/etFontSize"
-            android:layout_width="129dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:ems="10"
@@ -42,7 +42,7 @@
 
         <ImageButton
             android:id="@+id/ibDrag"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/todo"
