--- a/app/src/main/res/layout-land/list_item_row.xml
+++ b/app/src/main/res/layout-land/list_item_row.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="4dp"
-    android:foreground="?attr/selectableItemBackground">
+    android:background="@android:color/white"
+    android:foreground="?attr/selectableItemBackground"
+    android:padding="4dp">
 
     <LinearLayout
-        android:layout_width="326dp"
+        android:layout_width="576dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/print" />
+
 
             <CheckBox
                 android:id="@+id/cbIsBold"
